<resources>
    <string name="app_name">BTController</string>
    <string name="controller">遥控器</string>
    <string name="machine">机器人</string>
    <string name="open_bt">开启蓝牙</string>
    <string name="search_bt">搜索蓝牙</string>
    <string name="list_bt">蓝牙列表</string>
    <string name="status_back_show">状态回显:</string>
    <string name="controller_up">上</string>
    <string name="controller_down">下</string>
    <string name="controller_left">左</string>
    <string name="controller_right">右</string>
    <string name="visible_bt">蓝牙可见</string>
    <string name="cur_status">当前状态</string>

    <string name="bt_already_enable">蓝牙已经打开</string>
    <string name="start_search_bt">开始扫描附近蓝牙设备</string>
    <string name="no_bt_devices">未发现蓝牙设备,请确认已开启</string>
    <string name="search_finished">搜索完成</string>
    <string name="update_time">更新于:</string>

</resources>
