<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.wafej.btcontroller.MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:text="@string/controller"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textColor="@android:color/holo_red_light"/>
    <Button
        android:id="@+id/btn_open_bt_controller"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/open_bt"/>
    <Button
        android:id="@+id/btn_search_bt_controller"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/search_bt"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="4dp"
        android:paddingBottom="4dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:text="@string/status_back_show"/>
        <TextView
            android:id="@+id/tv_status_back_show"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:textColor="@android:color/holo_blue_light"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btn_up"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/controller_up"/>
        <Button
            android:id="@+id/btn_down"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/controller_down"/>
        <Button
            android:id="@+id/btn_left"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/controller_left"/>
        <Button
            android:id="@+id/btn_right"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/controller_right"/>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/list_bt"
        android:textSize="16sp"/>
    <ListView
        android:id="@+id/lv_bt_devices"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"></ListView>

</LinearLayout>
